--- a/_/components/terminalfour/sass/framework.scss
+++ b/_/components/terminalfour/sass/framework.scss
@@ -3,6 +3,6 @@
 
 // Import the framework you require by uncommenting the correct line below
 
-@import "../../lib/foundation/scss/foundation.scss";
+//@import "../../lib/foundation/scss/foundation.scss";
 //@import "../../lib/bootstrap-sass/scss/bootstrap.scss";
 //@import "../../lib/lemonade/lemonade.css";
