updates gruntfile and packages to launch local server, move files into style assets folder and makes references relative to server root

--- a/_/components/terminalfour/html/foundation-starter.html
+++ b/_/components/terminalfour/html/foundation-starter.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Client Name Cutups - Page Title</title>
-  <link rel="stylesheet" href="../style-assets/css/framework.css" />
-  <link rel="stylesheet" href="../style-assets/css/style-local.css" />
-  <script src="../_/components/lib/foundation/js/vendor/modernizr.js"></script>
+  <link rel="stylesheet" href="/style-assets/css/framework.css" />
+  <link rel="stylesheet" href="/style-assets/css/style-local.css" />
+  <script src="/style-assets/lib/foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
   <div class="row">
@@ -156,28 +156,27 @@
       </div>
     </div>
   </div>
-  <script src="../_/components/lib/foundation/js/vendor/jquery.js"></script>
+  <script src="/style-assets/lib/foundation/js/vendor/jquery.js"></script>
   
-  <script src="../_/components/lib/foundation/js/foundation/foundation.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.js"></script>
   <!-- TODO: You should remove any scripts you do not require -->
-  <script src="../_/components/lib/foundation/js/foundation/foundation.abide.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.accordion.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.alert.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.clearing.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.dropdown.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.equalizer.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.interchange.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.joyride.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.magellan.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.offcanvas.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.orbit.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.reveal.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.tab.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.tooltip.js"></script>
-  <script src="../_/components/lib/foundation/js/foundation/foundation.topbar.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.abide.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.accordion.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.alert.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.clearing.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.dropdown.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.equalizer.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.interchange.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.joyride.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.magellan.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.offcanvas.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.orbit.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.reveal.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.tab.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.tooltip.js"></script>
+  <script src="/style-assets/lib/foundation/js/foundation/foundation.topbar.js"></script>
   
-  <script src="../style-assets/js/t4-custom.min.js"></script>
+  <script src="/style-assets/js/t4-custom.min.js"></script>
   
-  <script src="//localhost:35729/livereload.js"></script><!-- TODO: THIS SHOULD BE REMOVED ON PRODUCTION -->
 </body>
 </html>
