--- a/_/components/terminalfour/html/bootstrap-starter.html
+++ b/_/components/terminalfour/html/bootstrap-starter.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Client Name Cutups - Page Title</title>
-  <link rel="stylesheet" href="../style-assets/css/framework.css" />
-  <link rel="stylesheet" href="../style-assets/css/style-local.css" />
+  <link rel="stylesheet" href="/style-assets/css/framework.css" />
+  <link rel="stylesheet" href="/style-assets/css/style-local.css" />
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -362,22 +362,21 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <!-- TODO: Remove unneeded plugins, or just uncomment the main bootstrap.js file below -->
-  <!--<script src="../_/components/lib/bootstrap-sass/js/bootstrap.min.js"></script>-->
-  <script src="../_/components/lib/bootstrap-sass/js/affix.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/alert.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/button.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/carousel.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/collapse.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/dropdown.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/modal.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/popover.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/scrollspy.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/tab.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/tooltip.js"></script>
-  <script src="../_/components/lib/bootstrap-sass/js/transition.js"></script>
+  <!--<script src="/style-assets/lib/bootstrap-sass/js/bootstrap.min.js"></script>-->
+  <script src="/style-assets/lib/bootstrap-sass/js/affix.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/alert.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/button.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/carousel.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/collapse.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/dropdown.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/modal.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/popover.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/scrollspy.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/tab.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/tooltip.js"></script>
+  <script src="/style-assets/lib/bootstrap-sass/js/transition.js"></script>
   
-  <script src="../style-assets/js/t4-custom.min.js"></script>
+  <script src="/style-assets/js/t4-custom.min.js"></script>
 
-  <script src="//localhost:35729/livereload.js"></script><!-- TODO: THIS SHOULD BE REMOVED ON PRODUCTION -->
 </body>
 </html>
