--- a/_/components/terminalfour/html/lemonade-starter.html
+++ b/_/components/terminalfour/html/lemonade-starter.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client Name Cutups - Page Title</title>
-    <link rel="stylesheet" href="../style-assets/css/framework.css" />
-    <link rel="stylesheet" href="../style-assets/css/style-local.css" />
+    <link rel="stylesheet" href="/style-assets/css/framework.css" />
+    <link rel="stylesheet" href="/style-assets/css/style-local.css" />
     <script src="http://modernizr.com/downloads/modernizr-latest.js"></script> <!-- TODO: Should be replaced with a custom build version from http://modernizr.com/.-->
     <style>
       .box {
@@ -293,8 +293,7 @@
     </div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.3.0/respond.min.js"></script>
-    <script src="../style-assets/js/t4-custom.min.js"></script>
+    <script src="/style-assets/js/t4-custom.min.js"></script>
   
-    <script src="//localhost:35729/livereload.js"></script><!-- TODO: THIS SHOULD BE REMOVED ON PRODUCTION -->
   </body>
 </html>
