--- a/_/components/terminalfour/sass/framework.scss
+++ b/_/components/terminalfour/sass/framework.scss
@@ -5,4 +5,4 @@
 
 //@import "../../lib/foundation/scss/foundation.scss";
 //@import "../../lib/bootstrap-sass/scss/bootstrap.scss";
-//@import "../../lib/lemonade/lemonade.css";
+//@import "/style-assets/lib/lemonade/lemonade.css";
