--- a/50main.css
+++ b/50main.css
@@ -625,6 +625,49 @@ width: 0px;
      width: 50px;
 }
 
+.caption-reverseA {
+     color: rgba(235, 237, 237, 100) !important;
+     font-size:40px;
+     background: #fff;
+     border: none;
+     text-align: left;
+}
+
+
+
+.caption-reverse {
+    /*position: relative;*/
+/*    right: 100%;
+    left: 0%;
+    width: 100%;
+    margin-top: 20px;
+    padding: 15px;*/
+    background: rgba(235, 237, 237, 1) !important;
+    color: #000 !important;
+
+}
+.caption-reverse > h2 {
+     color: #000 !important;
+     font-size:40px;
+     background: none;
+     border: none;
+     text-align: left;
+}
+
+.caption-reverse > h3 {
+     color: #000 !important;
+     font-size:24px;
+     text-align: left;
+}
+
+
+.caption-reverse > hr {
+     color: #000 !important;
+     width: 50px;
+}
+
+
+
 .caption-readmore {
     font-size:18px;
   	color: #fff;
@@ -633,6 +676,17 @@ width: 0px;
 .caption-readmore > a {
      color: #fff !important;
 }
+
+
+.readmore-reverse {
+    font-size:18px;
+    color: #000;
+    text-align: right;
+}
+.readmore-reverse > a {
+     color: #000 !important;
+}
+
 
 @media screen and (min-width: 768px) {
 
@@ -667,14 +721,13 @@ width: 0px;
     width: 50%;
     padding: 30px 50px 30px 50px;
     background: rgba(0, 68, 124, 0.9);
-    color: #fff !important;
+    /*color: #fff !important; */
 }
 
-
-.50-years-carousel {
-    background:url(/media/assets/homepagespring2016/50years85kAlumni_bug.png) no-repeat;
-    background-attachment: fixed;
-	background-size: cover;
+.50yearsbug {
+  padding: 0px;
+  max-height: 100px;
+  float: right;  
 }
 
 }
