--- a/50main.css
+++ b/50main.css
@@ -581,17 +581,18 @@ width: 0px;
     overflow:hidden;
 }
 
-.carousel-control .fa-angle-left, .carousel-control .fa-angle-right, .carousel-control .icon-next, .carousel-control .icon-prev {
+.carousel-control .fa-angle-left, .carousel-control .fa-angle-right, .carousel-control .fa-chevron-circle-right, .carousel-control .fa-chevron-circle-left, .carousel-control .icon-next, .carousel-control .icon-prev {
     position: absolute;
     top: 20%;
     z-index: 5;
     display: inline-block;
     font-size:35px;
-    background: rgba(255, 255, 255, 0.7);
+    /*background: rgba(255, 255, 255, 0.7);*/
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 5px;
     padding-right: 5px;
+
 }
 
 .carousel-caption {
@@ -643,27 +644,31 @@ width: 0px;
     margin-top: 20px;
     padding: 15px;*/
     background: rgba(235, 237, 237, 1) !important;
-    color: #000 !important;
+    color: gray !important;
+    text-shadow: none;
 
 }
 .caption-reverse > h2 {
-     color: #000 !important;
+     color: gray !important;
      font-size:40px;
      background: none;
      border: none;
      text-align: left;
+     text-shadow: none;
 }
 
 .caption-reverse > h3 {
-     color: #000 !important;
+     color: gray !important;
      font-size:24px;
      text-align: left;
+     text-shadow: none;
 }
 
 
 .caption-reverse > hr {
-     color: #000 !important;
+     color: gray !important;
      width: 50px;
+     text-shadow: none;
 }
 
 
@@ -680,11 +685,13 @@ width: 0px;
 
 .readmore-reverse {
     font-size:18px;
-    color: #000;
+    color: gray;
     text-align: right;
+    text-shadow: none;
 }
 .readmore-reverse > a {
-     color: #000 !important;
+     color: gray !important;
+     text-shadow: none;
 }
 
 
@@ -698,7 +705,7 @@ width: 0px;
     left: inherit;
 }
 
-.carousel-control .fa-angle-left, .carousel-control .fa-angle-right, .carousel-control .icon-next, .carousel-control .icon-prev {
+.carousel-control .fa-angle-left, .carousel-control .fa-angle-right, .carousel-control .fa-chevron-circle-right, .carousel-control .fa-chevron-circle-left, .carousel-control .icon-next, .carousel-control .icon-prev {
     position: absolute;
     top: 30%;
 }
