--- a/50main.css
+++ b/50main.css
@@ -625,7 +625,7 @@ text-align:right;
     right: 100%;
     left: 0%;
     width: 100%;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     padding: 0px;
     /*background: rgba(0, 68, 124, 1);*/
     /*color: #fff !important;*/
