4-6-16 end of day

--- a/50main.css
+++ b/50main.css
@@ -720,6 +720,11 @@ text-align:right;
      text-shadow: none;
 }
 
+.firstheight img {
+  display:none;
+}
+
+
 
 @media screen and (min-width: 768px) {
 
