--- a/50main.css
+++ b/50main.css
@@ -397,7 +397,7 @@ color: #00529c;
 font-size: 23pt;
 width: 100%;
 margin: 0px;
-margin-bottom:15px;
+margin-bottom:5px;
 line-height: 1.3;
 border-style: none;
 border-bottom: 1px solid #949fa8;
@@ -599,7 +599,7 @@ text-align:right;
     padding-bottom: 5px;
     padding-left: 5px;
     padding-right: 5px;*/
-    background: #00AAFF;
+    background: #003879;
     border-radius: 50px;
     color:white;
     opacity:0.6;
@@ -638,6 +638,7 @@ text-align:right;
      background: none;
      border: none;
      text-align: left;
+     font-weight: bold;
 }
 
 .carousel-caption > h3 {
@@ -675,7 +676,7 @@ text-align:right;
 
 }
 .caption-reverse > h2 {
-     color: #00447C !important;
+     color: #003879 !important;
      font-size:40px;
      background: none;
      border: none;
@@ -684,7 +685,7 @@ text-align:right;
 }
 
 .caption-reverse > h3 {
-     color: #000 !important;
+     color: #003879 !important;
      font-size:24px;
      text-align: left;
      text-shadow: none;
@@ -692,12 +693,14 @@ text-align:right;
 
 
 .caption-reverse > hr {
-     color: #000 !important;
+     color: #003879 !important;
      width: 50px;
      text-shadow: none;
 }
 
-
+.caption-reverse > a {
+    color: #003879 !important;
+}
 
 .caption-readmore {
     font-size:18px;
@@ -711,12 +714,12 @@ text-align:right;
 
 .readmore-reverse {
     font-size:18px;
-    color: #000;
+    color: #003879;
     text-align: right;
     text-shadow: none;
 }
 .readmore-reverse > a {
-     color: #000 !important;
+     color: #003879 !important;
      text-shadow: none;
 }
 
