--- a/50main.css
+++ b/50main.css
@@ -86,6 +86,12 @@ Homepage Spring 2016
   padding: 5%
 }
 
+.campus-info {
+    border: 0px;
+    border-bottom: 1px solid white;
+    margin-bottom: 15px;
+}
+
 @media (min-width: 768px) {
         .navbar .navbar-nav {
             display: inline-block;
@@ -95,6 +101,12 @@ Homepage Spring 2016
         .navbar .navbar-collapse {
             text-align: center;
         }
+        .campus-info {
+            border: 0px;
+            border-right: 1px solid white;
+            border-bottom: 0;
+            margin-bottom: 0;
+      }
     }
 
 .toolbar {
