--- a/50main.css
+++ b/50main.css
@@ -641,16 +641,18 @@ text-align:right;
 }
 .carousel-caption > h2 {
      color: #fff !important;
-     font-size:40px;
+     font-size:25px;
      background: none;
      border: none;
      text-align: left;
+     text-shadow: none;
 }
 
 .carousel-caption > h3 {
      color: #fff !important;
-     font-size:24px;
+     font-size:15px;
      text-align: left;
+     text-shadow: none;
 }
 
 
