--- a/50main.css
+++ b/50main.css
@@ -745,6 +745,14 @@ text-align:right;
     top: 30%;
 }
 
+.carousel-caption > h2 {
+     font-size:40px;
+}
+
+.carousel-caption > h3 {
+     font-size:24px;
+}
+
 }
 
 
