--- a/50main-original.css
+++ b/50main-original.css
@@ -84,6 +84,11 @@ Homepage Spring 2016
   line-height: 1.4;
   padding: 5%
 }
+.campus-info {
+    border: 0px;
+    border-bottom: 1px solid white;
+    margin-bottom: 15px;
+}
 @media (min-width: 768px) {
   .navbar .navbar-nav {
     display: inline-block;
@@ -92,12 +97,17 @@ Homepage Spring 2016
   .navbar .navbar-collapse {
     text-align: center;
   }
+  .campus-info {
+      border: 0px;
+      border-right: 1px solid white;
+      border-bottom: 0;
+      margin-bottom: 0;
+  }
 }
 .toolbar {
   z-index: 9999;
   background-color: #fff;
-  border-bottom-color: #A0925E;
-  border-width: 0 0 2px;
+  border-width: 0;
 }
 .toolbar .quicktools {
   font-size: 16px;
@@ -110,6 +120,7 @@ Homepage Spring 2016
   border: none;
   color: #d11242;
   font-size: 25px;
+  margin-right: 5px;
 }
 .toolbar button.navbar-toggle span.icon-bar {
   color: #fff
@@ -134,6 +145,9 @@ Homepage Spring 2016
 .toolbar li.active a {
   background: #ecf0f1!important;
   color: #333!important
+}
+.navbar-brand {
+    height: 53px;
 }
 .mainBlueNavigation {
   background: #003663
